--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.udoc">
+    package="com.example.code_debugger">
     <uses-permission android:name="android.permission.ACTION_MANAGER_OVERLAY_PERMISSION" />
    <application
-        android:label="SEIQ-Tool"
+        android:label="Code Solver"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
