--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,26 +33,21 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  firestore_search: ^0.1.9
-  google_fonts: ^3.0.1
-  firebase_auth: ^3.6.0
-  google_sign_in: ^5.4.0
-  cloud_firestore: ^3.2.1
-  font_awesome_flutter: ^10.1.0
+  cupertino_icons: ^1.0.2 #
+  google_fonts: ^3.0.1 #
+  font_awesome_flutter: ^10.1.0 #
+  flutter_easyloading: ^3.0.5 #
+  shared_preferences: ^2.0.18 #
+  fluttertoast: any
+  carousel_slider: ^4.2.1
+  webview_flutter: ^3.0.4
+  count_stepper: ^0.0.4
+  pinput: ^2.2.31
+  flutter_rating_bar: ^4.0.1
+  code_editor: ^1.3.2
 
   provider: ^6.0.3
-  url_launcher: ^6.1.4
-  cached_network_image: ^3.2.1
-  bottom_navy_bar: ^6.0.0
   firebase_core: ^1.20.0
-  firebase_storage: ^10.3.4
-  flutter_form_builder: ^7.3.1
-  perfect_volume_control: ^1.0.5
-  hardware_buttons_find_flutter: any
-  flutter_svg: ^2.0.1
-  velocity_x: ^3.5.1
-  form_builder_validators: ^8.4.0
 
 
 dependency_overrides:
